changed pupil content on pin slip to not exceed 500px so that overlap is resolved

--- a/admin/assets/stylesheets/elements/_printing.scss
+++ b/admin/assets/stylesheets/elements/_printing.scss
@@ -110,6 +110,7 @@
     text-align: left;
     font-size: 12px;
     margin-bottom: govuk-em(40px, $govuk-root-font-size);
+    max-width: 500px;
   }
   .fullname {
     font-size: 22px;
